PROJECT(BTC_APPLICATIONS)

SET(BTCCORE_BUNDLED TRUE)

IF(NOT BTCCORE_BUNDLED)
    FIND_PACKAGE(BTCCORE)
    IF(BTCCORE_FOUND)
        INCLUDE(${BTCCORE_USE_FILE})
    ELSE()
        MESSAGE(ERROR "BTCCORE neeeded but NOT FOUND")
    ENDIF()
    SET(CMAKE_MODULE_PATH  ${PROJECT_SOURCE_DIR}/../../Macros)
ENDIF()
SET(BITCOIN_APPLICATION_DIR ${PROJECT_SOURCE_DIR})


SET(TARGET_DEFAULT_PREFIX "application_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Applications")
SET(TARGET_COMMON_LIBRARIES 
	btc
	btcNode
	btcRPC
)

IF(DYNAMIC_BITCOIN)
    ADD_SUBDIRECTORY(btcproxy)
    ADD_SUBDIRECTORY(bitcoind)
ELSE()
    # need to define this on win32 or linker cries about _declspecs
    ADD_DEFINITIONS(-DBTC_LIBRARY_STATIC)
ENDIF()

