PROJECT(LIBCOIN_APPLICATIONS)

SET(LIBCOINCORE_BUNDLED TRUE)

IF(NOT LIBCOINCORE_BUNDLED)
    FIND_PACKAGE(LIBCOINCORE)
    IF(LIBCOINCORE_FOUND)
        INCLUDE(${LIBCOINCORE_USE_FILE})
    ELSE()
        MESSAGE(ERROR "LIBCOINCORE neeeded but NOT FOUND")
    ENDIF()
    SET(CMAKE_MODULE_PATH  ${PROJECT_SOURCE_DIR}/../../Macros)
ENDIF()
SET(LIBCOIN_APPLICATION_DIR ${PROJECT_SOURCE_DIR})


SET(TARGET_DEFAULT_PREFIX "app_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Applications")
SET(TARGET_COMMON_LIBRARIES 
	coin
	coinChain
	coinHTTP
)

ADD_SUBDIRECTORY(bitcoind)
ADD_SUBDIRECTORY(coind)
ADD_SUBDIRECTORY(coinexplorer)

IF(DYNAMIC_LIBCOIN)
ELSE()
    # need to define this on win32 or linker cries about _declspecs
    ADD_DEFINITIONS(-DLIBCOIN_LIBRARY_STATIC)
ENDIF()

